force-app/main/default/objects/ampi__Section__c/ampi__Section__c.object-meta.xml
<CustomObject>
    <description>This object captures the sections/categories in a Submission template or response</description>
    <label>Section</label>
    <nameField>
        <displayFormat>SEC-{00000}</displayFormat>
        <label>Section Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>