force-app/main/default/objects/ampi__Section__c/fields/ampi__Active__c.field-meta.xml
<CustomField>
    <fullName>ampi__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox field to control whether or not a Section is displayed in a Submission template. If this field is TRUE, it will be cloned when a new Submission is created from the parent template. If this field is FALSE, it will not be cloned when a new Submission is created.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>