force-app/main/default/objects/ampi__Section__c/fields/ampi__Default__c.field-meta.xml
<CustomField>
    <fullName>ampi__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field marks whether a Section record is the default Section that is created when a Question is created without being assigned to a Section.</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>