force-app/main/default/objects/ampi__Section__c/fields/ampi__Description__c.field-meta.xml
<CustomField>
    <fullName>ampi__Description__c</fullName>
    <description>Text field to capture the details of the Section record</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>