force-app/main/default/objects/ampi__Section__c/fields/ampi__Instructions__c.field-meta.xml
<CustomField>
    <fullName>ampi__Instructions__c</fullName>
    <description>Long text area field to input any additional instructions or guidance to users when responding to this Section record. These instructions are displayed in the SubmissionResponseForm component.</description>
    <inlineHelpText>Use this box to provide additional guidance to your submitting users on this section</inlineHelpText>
    <label>Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>