force-app/main/default/objects/ampi__Section__c/fields/ampi__Is_Scored__c.field-meta.xml
<CustomField>
    <fullName>ampi__Is_Scored__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to track whether or not a Section record should be scored when its parent Submission is reviewed. If marked as TRUE, then the Section is displayed with an input field for a score in the SubmissionResponseScoring component.</description>
    <inlineHelpText>Use this checkbox to enable or prevent reviewers from assigning a score to this section. If unchecked, users will not be able to score the section and it will not display in the radar charts.</inlineHelpText>
    <label>Is Scored</label>
    <type>Checkbox</type>
</CustomField>