force-app/main/default/objects/ampi__Section__c/fields/ampi__Order__c.field-meta.xml
<CustomField>
    <fullName>ampi__Order__c</fullName>
    <description>Number field to capture the order in which this Section record will appear in the Lightning components for Submission. This field is populated by the SubmissionTemplateBuilder component.</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>