force-app/main/default/objects/ampi__Section__c/fields/ampi__Parent_Section__c.field-meta.xml
<CustomField>
    <fullName>ampi__Parent_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to mark the parent template Section from which a Section is cloned</description>
    <label>Parent Section</label>
    <referenceTo>ampi__Section__c</referenceTo>
    <relationshipLabel>Child Sections</relationshipLabel>
    <relationshipName>Child_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>