force-app/main/default/objects/ampi__Section__c/fields/ampi__Reviewer_Comments__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reviewer_Comments__c</fullName>
    <description>Long text area field for reviewers to input any additional commentary with regard to their scores on a Section record</description>
    <label>Reviewer Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>