force-app/main/default/objects/ampi__Section__c/fields/ampi__Score__c.field-meta.xml
<CustomField>
    <fullName>ampi__Score__c</fullName>
    <description>Number field to capture the reviewer&apos;s overall score of responses to this Section</description>
    <label>Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>