force-app/main/default/objects/ampi__Section__c/fields/ampi__Submission__c.field-meta.xml
<CustomField>
    <fullName>ampi__Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to capture the parent Submission record for this Section</description>
    <label>Submission</label>
    <referenceTo>ampi__Submission__c</referenceTo>
    <relationshipLabel>Sections</relationshipLabel>
    <relationshipName>Sections</relationshipName>
    <type>Lookup</type>
</CustomField>