force-app/main/default/objects/ampi__Section__c/fields/ampi__xx_Conditional_Logic_Responses__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Conditional_Logic_Responses__c</fullName>
    <label>Conditional Logic Responses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>