force-app/main/default/objects/ampi__Section__c/fields/ampi__xx_Conditionally_Displayed__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Conditionally_Displayed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this section is hidden, then all the questions inside the section will be hidden too</inlineHelpText>
    <label>Conditionally Display This Section?</label>
    <type>Checkbox</type>
</CustomField>