force-app/main/default/objects/ampi__Section__c/fields/ampi__xx_Skipped__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Skipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skipped</label>
    <type>Checkbox</type>
</CustomField>