force-app/main/default/objects/ampi__Section__c/fields/ampi__xx_Start_New_Page__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Start_New_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to control whether or not a Section is displayed in a new page. If this field is TRUE, it will be displayed in a new page when a new Submission is created from the parent template. If this field is FALSE, it will not be displayed in a new page when a new Submission is created.</description>
    <label>Start New Page</label>
    <type>Checkbox</type>
</CustomField>